update: added user role
