# app/Http/Controllers/API/AuthController.php
@@ -42,6 +42,7 @@ class AuthController
                 'id' => $user->id,
                 'name' => $user->name,
                 'email' => $user->email,
+                'role' => $user->role,
             ]
         ], 201);
     }
@@ -75,6 +76,7 @@ class AuthController
                 'id' => $user->id,
                 'name' => $user->name,
                 'email' => $user->email,
+                'role' => $user->role,
             ]
         ], 200);
     }
